app/entry/styles.css
main.date {
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    height: 100svh;
    flex-direction: column;
}

.content {
    width: min(40em, 90vw);
    height: 35em;
    position: relative;
    font-size: min(1.3em, 4vw);
    transition: opacity 0.2s;
}

.ck-body-wrapper {
    --ck-color-panel-background: #0f0f0f;
    --ck-color-toolbar-background: var(--ck-color-panel-background);
    --ck-color-panel-border: #222;
    --ck-color-toolbar-border: var(--ck-color-panel-border);
    --ck-balloon-border-width: 2px;
    --ck-color-text: #ccc;
    --ck-color-button-default-hover-background: var(--ck-color-panel-border);
    --ck-color-button-default-active-background: var(--ck-color-button-on-background);
    --ck-color-button-on-background: var(--ck-color-panel-border);
    --ck-color-button-on-hover-background: #333;
    --ck-color-button-on-active-background: var(--ck-color-button-on-hover-background);
    --ck-color-button-on-color: #eee;
    --ck-focus-ring: none;
    --ck-focus-outer-shadow: none;
}

.ck-content {
    --ck-spacing-large: 0.25em;

    border: none !important;
    line-height: 1.8em;
    color: white;
    padding: 0.2em 0.5em;
    padding-left: 3em !important;
    padding-bottom: 30em !important;
    outline: none;
    transition: border 0.2s;
    width: 100%;
    height: 100%;
    position: absolute;
    background: linear-gradient(#ffffff33 0px, #ffffff33 2px, transparent 2px);
    background-size: 100% 1.8em;
    background-attachment: local;
    background-position: 0 1.6em;
    resize: none;
    font-feature-settings: "ss03";
    scrollbar-width: none;
}

.ck-content code {
    line-height: 1em;
}

.line {
    width: 2px;
    position: absolute;
    height: calc(100% - 0.5em);
    background-color: #333;
    margin-left: 2em;
    margin-top: 0.5em;
    z-index: 1;
    /* hide until editor loads */
    display: none;
}

.line.visible {
    display: block;
}

#loadingEntry {
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    font-size: min(2em, 6vw);
    width: min(30em, 95vw);
    text-align: center;
}

#loadingEntry.hidden {
    display: none;
}

/* remove ckeditor logo */

.ck-powered-by-balloon {
    display: none !important;
}

@media (max-width: 1350px) {
    main.date {
        justify-content: flex-start;
    }

    .content {
        margin-bottom: 12.5em;
        margin-top: 3em;
    }

    .ck-content {
        padding-bottom: 0 !important;
    }
}

@media (max-width: 700px) {
    .bubble {
        position: relative;
        width: 90%;
        bottom: unset;
        right: unset;
        margin-top: 1em;
        margin-bottom: 1em;
    }

    .content {
        margin-bottom: 17.5rem;
        margin-top: 3em;
        height: 100%;
    }
}

